# schoolride-constraint-mod

./: .gitignore  README.md  package.json  pyproject.toml  pyrightconfig.json  test.jsonl
src/agents/: __init__.py  error_analysis_agent.py  generation_agent.py  judgment_agent.py  main_agent.py  revision_agent.py
src/backends/: claude_cli.py  native.py  prompt_tools.py
src/clients/: fs_mcp.py  index_client.py  llm_client.py  mcp_client.py
src/configs/: __init__.py  config.ini  config_parser.py  constraints.txt  queries.json  queries_expanded.json
src/constraint_modification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: api_agent.py  claude_agent.py  constraint_schema.py  main_agent.py  pipeline.py  run.py  schedule_diff.py  validation.py
src/dsl/: __init__.py  adapter.py
src/mcp/: context.py  filesystem.py  index.py  pathfinder.py  serena.py
src/utils/: code_tools.py  preflight.py  schedule_diff.py  test_runner.py  utils.py
tests/: test_callsto_metadata.py  test_claude_baseline.py  test_constraint_agent.py  test_explore.py  test_filesystem_mcp_edit.py
